--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,7 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
-black = "*"
+black = "==19.10b0"
 flake8-isort = "*"
 flake8-print = "*"
 flake8 = "*"
@@ -12,11 +12,9 @@ awscli = "*"
 isort = "*"
 pytest = "*"
 pytest-cov = "*"
+freezegun = "*"
 
 [packages]
 
 [requires]
 python_version = "3.7"
-
-[pipenv]
-allow_prereleases = true
