--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [tool:pytest]
-addopts = -v --durations=0
+addopts = -vv
 
 [coverage:run]
 omit =
@@ -14,4 +14,10 @@ omit =
 
 [coverage:report]
 show_missing = true
-fail_under = 80
+fail_under = 1
+
+[isort]
+
+[flake8]
+max-line-length = 88
+exclude = __pycache__
