--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -94,7 +94,7 @@ workflows:
     jobs:
       - test_unit
       - deploy_production:
-          required:
+          requires:
             - test_unit
           filters:
             branches:
